# db25-logical-plan

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: ci.yml
docs/: pipeline-verification.md
docs/design/: expression-ir.md
include/db25/plan/: binder.hpp  expr_ir.hpp  logical_plan.hpp  optimizer.hpp
src/: binder.cpp  expr_ir.cpp  expr_lower.cpp  logical_plan.cpp  optimizer.cpp
tests/: test_binder.cpp  test_expr_lower.cpp  test_optimizer.cpp
